--- a/index.html.html
+++ b/index.html.html
@@ -97,7 +97,7 @@
 
             // Имитация отправки данных на сервер для обработки
             try {
-                const response = await fetch('https://your-server-url.com/api/generate', {
+                const response = await fetch('https://rickxxxmorty.pythonanywhere.com/', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
